v0.0.15 2014-12-14

* Fix problem with empty string arriving in do_transpose

v0.0.14 2014-12-12

* Add support for '%' to denote repeat bars
* Output now sorts tunes by name regardless of input sort order
* Improved composer / credit handling
* HTML output now includes composer / credit if present
* Added support for (+) to denote coda symbol
* Added support for inline annotations using [, ] and _ for spaces
* Fixed seven bars on a line bug

v0.0.13 2013-11-24

* Fixed bug where time signatures were being transposed
* Fixed bug where slash bass chords weren't being transposed

v0.0.12, 2013-10-01

* Stopped pylint complaining so much about coding style
* Fixed subtle bugs introduced by above
* setup.py now uses setuputils
* Stub test suite for libcbk.py in place
* -h, --help output now less gnomic
* Text output now handles transposing and repeats 

v0.0.11, 2013-09-30 -- Output now written to files

* -s option writes to stdout instead
* Broken text outputter fixed

v0.0.10, 2013-09-27 -- Fixed lies in documentation

v0.0.9, 2013-09-27 -- Initial release